# ZJProject-Cotrol-Part

./: .git_upload.bat  .git_upload.sh  .gitignore  BUILD_AND_DEBUG.md  CMakeLists.txt  GIT_UPLOAD_INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  SIMULATION_GUIDE.md  TROUBLESHOOTING.md  compile.bat  compile.sh  package.xml  quick_start.md  伪代码.md  说明文档.docx
config/: error_monitor.yaml
config/common/: actuator.yaml  sensors.yaml
config/controllers/: mpc.yaml  pid.yaml  pure_pursuit.yaml
config/loader_v1/: actuator.yaml  steering_limits.yaml
config/loader_v2/: actuator.yaml
include/loader_control/: actuator_model.hpp  control_node.hpp  controller_base.hpp  data_receiver.hpp  pid_controller.hpp  pure_pursuit_controller.hpp  steering_error_monitor.hpp  vehicle_state.hpp
launch/: control.launch.py  control_fixed.launch.py  control_with_simulation.launch.py  simulation.launch.py
loader_control/: CMakeLists.txt  package.xml
loader_control/config/: control.yaml
loader_control/include/loader_control/controllers/: base_controller.hpp  mpc_controller.hpp  pid_controller.hpp  pure_pursuit_controller.hpp  smc_controller.hpp
loader_control/include/loader_control/state_estimator/: ukf_estimator.hpp
loader_control/include/loader_control/utils/: command_modulator.hpp  safety_monitor.hpp  trajectory_interpolator.hpp
loader_control/launch/: control_stack.launch.py
loader_control/src/controllers/: mpc_controller.cpp  pid_controller.cpp  pure_pursuit_controller.cpp  smc_controller.cpp
loader_control/src/nodes/: command_modulator_node.cpp  control_manager_node.cpp  state_estimator_node.cpp  trajectory_tracker_node.cpp
loader_control/src/state_estimator/: ukf_estimator.cpp
loader_control/src/utils/: command_modulator.cpp  safety_monitor.cpp  trajectory_interpolator.cpp
loader_control/test/: test_control_performance.py
scripts/: error_analyzer.py  param_merge.py
src/: actuator_model.cpp  control_node.cpp  controller_base.cpp  data_receiver.cpp  main.cpp  pid_controller.cpp  pure_pursuit_controller.cpp  simulation_node.cpp  steering_error_monitor.cpp
