<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loader_control</name>
  <version>1.0.0</version>
  <description>Loader autonomous driving control module with PID/Pure Pursuit/MPC controllers</description>
  <maintainer email="lhw@example.com">lhw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>diagnostic_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Build dependencies -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

